updated embed page to work on Firefox (bug reported by @nathalierun)

--- a/static/style/project.css
+++ b/static/style/project.css
@@ -193,16 +193,19 @@ img.collection-thumbnail {
     font-size: 1em;
 }
 
-.project.big .embed {
+.embed {
     z-index: 100;
+    position: relative;
+}
+
+.project.big .embed {
     display: flex;
     flex-direction: column;
     align-items: stretch;
     margin-bottom: 0.5em;
-    position: relative;
 }
 
-.project.big .embed .project-loader {
+.embed .project-loader {
     z-index: 1;
     position: absolute;
     text-align: center;
